chore: sync web-app public locales and add recent screenshots

--- a/web-app/public/locales/ar.json
+++ b/web-app/public/locales/ar.json
@@ -315,6 +315,10 @@
     "no_alerts": "لا توجد تنبيهات",
     "no_anomalies": "لم يتم اكتشاف أي حالات شاذة",
     "no_rules": "لم يتم تكوين أي قواعد",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "منتج خامل",
     "rule_low_stock": "مخزون منخفض",
     "rule_out_of_stock": "نفاد المخزون",
@@ -503,6 +507,9 @@
     "info": "معلومات",
     "items_count": "{{count}} عنصر",
     "language_choice": "اختر اللغة",
+    "last_30_days": "آخر 30 يومًا",
+    "last_7_days": "آخر 7 أيام",
+    "last_90_days": "آخر 90 يومًا",
     "loading": "جاري التحميل...",
     "merchant": "تاجر",
     "months_ago": "قبل {{count}} شهور",
@@ -694,7 +701,10 @@
     "abc_analysis": "تحليل ABC (الأولويات)",
     "admin_messages": "رسائل الإدارة",
     "ai_daily_summary": "ملخص الذكاء الاصطناعي لليوم",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "اضغط للإنشاء",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "التوزيع حسب الفئة",
     "class_a": "الفئة أ",
     "class_a_desc": "80% من إيراداتك",
@@ -702,6 +712,11 @@
     "class_b_desc": "15% من إيراداتك",
     "class_c": "الفئة ج",
     "class_c_desc": "5% من إيراداتك",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "عد",
     "count_stock": "عد المخزون",
     "count_stock_prompt": "أدخل الكمية الفعلية لـ",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "منتهي الصلاحية!",
     "expiry_alerts": "تنبيهات انتهاء الصلاحية (30 يوم)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "إنشاء مهام جديدة",
     "greeting": "مرحباً، {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "السجل",
+    "items_abbrev": "items",
     "low_stock": "مخزون منخفض",
     "month_revenue": "مبيعات الشهر",
     "movements_30d": "الحركات (30 يوم)",
     "movements_history": "سجل الحركات",
     "net": "صافي",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "لا توجد حركات",
+    "no_stock_data": "No stock data available for this period",
     "normal": "طبيعي",
     "order_btn": "طلب",
     "orders_section": "الطلبات",
     "out_of_stock": "نفاد المخزون",
     "overstock": "مخزون زائد",
     "pending_orders": "طلبات قيد الانتظار",
+    "period_history": "{{count}}d history",
     "preferences_error": "تعذر تحديث تفضيلاتك.",
     "products_count_one": "منتج واحد",
     "products_count_other": "{{count}} منتجات",
     "profitability_analysis": "تحليل الربحية",
     "recent_alerts": "التنبيهات الأخيرة",
     "recent_sales": "المبيعات الأخيرة",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "جرد دوري",
     "see_detail_product": "عرض التفاصيل حسب المنتج",
     "see_feature": "اكتشاف الميزة",
+    "see_full_report": "See full report",
     "see_less": "عرض أقل",
     "see_more": "عرض المزيد",
     "see_more_count": "عرض {{count}} منتجات حرجة أخرى",
@@ -755,10 +790,12 @@
     "stats": "إحصائيات",
     "status_distribution": "توزيع الحالات",
     "stock_by_category": "المخزون حسب الفئة",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "تطور قيمة المخزون (7 أيام)",
     "stock_label": "المخزون",
     "stock_status": "حالة المخزون",
     "stock_value": "قيمة المخزون",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "إليك حالة مخزونك",
     "suggestions_reorder": "اقتراحات التموين",
     "threshold": "الحد",
@@ -769,6 +806,9 @@
     "top_products_value": "أفضل المنتجات (حسب القيمة)",
     "total_value": "القيمة الإجمالية",
     "units": "وحدات",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1805,6 +1845,20 @@
     "users_permissions": "المستخدمون والصلاحيات",
     "users_permissions_desc": "إدارة صلاحيات الموظفين",
     "version": "الإصدار"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
