--- a/web-app/public/locales/de.json
+++ b/web-app/public/locales/de.json
@@ -315,6 +315,10 @@
     "no_alerts": "Keine Alarme",
     "no_anomalies": "Keine ALast Namealien erkannt",
     "no_rules": "Keine Regeln konfiguriert",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Ruhendes Produkt",
     "rule_low_stock": "Niedriger Bestand",
     "rule_out_of_stock": "Ausverkauft",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "{{count}} Artikel",
     "language_choice": "Sprache wählen",
+    "last_30_days": "Letzte 30 Tage",
+    "last_7_days": "Letzte 7 Tage",
+    "last_90_days": "Letzte 90 Tage",
     "loading": "Laden...",
     "merchant": "Händler",
     "months_ago": "vor {{count}} Monaten",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC-Analyse (Prioritäten)",
     "admin_messages": "Nachrichten des Administrators",
     "ai_daily_summary": "KI-Zusammenfassung des Tages",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tippen zum Generieren",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Verteilung nach Kategorie",
     "class_a": "Klasse A",
     "class_a_desc": "80% Ihres Umsatzes",
@@ -702,6 +712,11 @@
     "class_b_desc": "15% Ihres Umsatzes",
     "class_c": "Klasse C",
     "class_c_desc": "5% Ihres Umsatzes",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Zählen",
     "count_stock": "Bestand zählen",
     "count_stock_prompt": "Geben Sie die tatsächliche Menge ein für",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Abgelaufen!",
     "expiry_alerts": "Verfallsalarme (30T)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Neue Aufgaben generieren",
     "greeting": "Hallo, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Verlauf",
+    "items_abbrev": "items",
     "low_stock": "Niedriger Bestand",
     "month_revenue": "Monatsverkäufe",
     "movements_30d": "Bewegungen (30 Tage)",
     "movements_history": "Bewegungsverlauf",
     "net": "Netto",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Keine Bewegungen",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Bestellen",
     "orders_section": "Bestellungen",
     "out_of_stock": "Ausverkauft",
     "overstock": "Überbestand",
     "pending_orders": "Ausstehend",
+    "period_history": "{{count}}d history",
     "preferences_error": "Ihre Einstellungen konnten nicht aktualisiert werden.",
     "products_count_one": "{{count}} Produkt",
     "products_count_other": "{{count}} Produkte",
     "profitability_analysis": "Rentabilitätsanalyse",
     "recent_alerts": "Aktuelle Alarme",
     "recent_sales": "Letzte Verkäufe",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotierende Inventur",
     "see_detail_product": "Details pro Produkt anzeigen",
     "see_feature": "Diese Funktion ansehen",
+    "see_full_report": "See full report",
     "see_less": "Weniger anzeigen",
     "see_more": "Mehr anzeigen",
     "see_more_count": "Die anderen {{count}} kritischen Produkte anzeigen",
@@ -755,10 +790,12 @@
     "stats": "Statistiken",
     "status_distribution": "Statusverteilung",
     "stock_by_category": "Bestand nach Kategorie",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Bestandswertentwicklung (7T)",
     "stock_label": "Bestand",
     "stock_status": "Bestandsstatus",
     "stock_value": "Bestandswert",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Hier ist Ihr Bestandsstatus",
     "suggestions_reorder": "Bestellvorschläge",
     "threshold": "Schwelle",
@@ -769,6 +806,9 @@
     "top_products_value": "Top-Produkte (Wert)",
     "total_value": "Gesamtwert",
     "units": "Einheiten",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1804,6 +1844,20 @@
     "users_permissions": "Benutzer & Berechtigungen",
     "users_permissions_desc": "Verwalten Sie die Zugänge Ihrer Mitarbeiter",
     "version": "Version"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
