--- a/web-app/public/locales/es.json
+++ b/web-app/public/locales/es.json
@@ -320,6 +320,10 @@
     "no_alerts": "No hay alertas",
     "no_anomalies": "No se detectaron aLast Namealías",
     "no_rules": "No hay reglas configuradas",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Producto inactivo",
     "rule_low_stock": "Stock bajo",
     "rule_out_of_stock": "Agotado",
@@ -527,6 +531,9 @@
     "info": "Info",
     "items_count": "{{count}} artículo(s)",
     "language_choice": "Elegir idioma",
+    "last_30_days": "Últimos 30 días",
+    "last_7_days": "Últimos 7 días",
+    "last_90_days": "Últimos 90 días",
     "loading": "Cargando...",
     "merchant": "Comerciante",
     "months_ago": "hace {{count}} meses",
@@ -718,7 +725,10 @@
     "abc_analysis": "Análisis ABC (Prioridades)",
     "admin_messages": "Mensajes del administrador",
     "ai_daily_summary": "Resumen diario de IA",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Toca para generar",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Distribución por Categoría",
     "class_a": "Clase A",
     "class_a_desc": "80% de tus ingresos",
@@ -726,6 +736,11 @@
     "class_b_desc": "15% de su facturación",
     "class_c": "Clase C",
     "class_c_desc": "5% de su facturación",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Contar",
     "count_stock": "Contar el stock",
     "count_stock_prompt": "Introduzca la cantidad real para",
@@ -739,33 +754,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "¡Caducado!",
     "expiry_alerts": "Alertas de Caducidad (30d)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Generar nuevas tareas",
     "greeting": "Hola, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "Historial",
     "history_btn": "Historial",
+    "items_abbrev": "items",
     "low_stock": "Stock bajo",
     "month_revenue": "Ventas mensuales",
     "movements_30d": "Movimientos (30 días)",
     "movements_history": "Historial de movimientos",
     "net": "Neto",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Sin movimientos",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Pedir",
     "orders_section": "Pedidos",
     "out_of_stock": "Agotado",
     "overstock": "Exceso de stock",
     "pending_orders": "Pendientes",
+    "period_history": "{{count}}d history",
     "preferences_error": "No se pudieron actualizar sus preferencias.",
     "products_count_one": "{{count}} producto",
     "products_count_other": "{{count}} productos",
     "profitability_analysis": "Análisis de Rentabilidad",
     "recent_alerts": "Alertas recientes",
     "recent_sales": "Ventas recientes",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventario Rotativo",
     "see_detail_product": "Ver detalle por producto",
     "see_feature": "Ver esta funcionalidad",
+    "see_full_report": "See full report",
     "see_less": "Ver menos",
     "see_more": "Ver más",
     "see_more_count": "Ver los otros {{count}} productos críticos",
@@ -779,10 +814,12 @@
     "stats": "Estadísticas",
     "status_distribution": "Distribución de estados",
     "stock_by_category": "Stock por categoría",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Evolución Valor Stock (7d)",
     "stock_label": "Stock",
     "stock_status": "Estado del Stock",
     "stock_value": "Valor del stock",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Aquí está el estado de su stock",
     "suggestions_reorder": "Sugerencias de reabastecimiento",
     "threshold": "Umbral",
@@ -793,6 +830,9 @@
     "top_products_value": "Top productos (valor)",
     "total_value": "Valor total",
     "units": "unidades",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Análisis ABC",
     "widget_category_chart": "Distribución por categoría",
     "widget_expiry_alerts": "Alertas de vencimiento",
@@ -1755,26 +1795,26 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "inventory_check_label": "Verificación de inventario",
-    "inventory_check_desc": "Alerta si no hay inventario desde hace X días",
-    "dormant_products_label": "Productos inactivos",
-    "dormant_products_desc": "Productos sin ventas desde hace X días",
-    "late_deliveries_label": "Entregas tardías",
-    "late_deliveries_desc": "Crítico después de X días de retraso",
-    "replenishment_label": "Reposición",
-    "replenishment_desc": "Productos por debajo del stock mínimo",
-    "pending_invitations_label": "Invitaciones pendientes",
-    "pending_invitations_desc": "Pendiente desde hace X días",
-    "debt_recovery_label": "Recuperación de deudas",
-    "debt_recovery_desc": "Recordatorios de deudas pendientes",
-    "client_reactivation_label": "Reactivación de clientes",
-    "client_reactivation_desc": "Clientes fieles inactivos desde hace X días",
-    "birthdays_label": "Cumpleaños",
     "birthdays_desc": "Notificación de próximos cumpleaños",
-    "monthly_report_label": "Informe mensual",
-    "monthly_report_desc": "Generar resumen de rendimiento",
-    "expense_spike_label": "Pico de gastos",
+    "birthdays_label": "Cumpleaños",
+    "client_reactivation_desc": "Clientes fieles inactivos desde hace X días",
+    "client_reactivation_label": "Reactivación de clientes",
+    "debt_recovery_desc": "Recordatorios de deudas pendientes",
+    "debt_recovery_label": "Recuperación de deudas",
+    "dormant_products_desc": "Productos sin ventas desde hace X días",
+    "dormant_products_label": "Productos inactivos",
     "expense_spike_desc": "Alerta si los gastos aumentan un X%",
+    "expense_spike_label": "Pico de gastos",
+    "inventory_check_desc": "Alerta si no hay inventario desde hace X días",
+    "inventory_check_label": "Verificación de inventario",
+    "late_deliveries_desc": "Crítico después de X días de retraso",
+    "late_deliveries_label": "Entregas tardías",
+    "monthly_report_desc": "Generar resumen de rendimiento",
+    "monthly_report_label": "Informe mensual",
+    "pending_invitations_desc": "Pendiente desde hace X días",
+    "pending_invitations_label": "Invitaciones pendientes",
+    "replenishment_desc": "Productos por debajo del stock mínimo",
+    "replenishment_label": "Reposición",
     "unit_days": "días"
   },
   "settings": {
@@ -1859,6 +1899,20 @@
     "users_permissions": "Usuarios y Permisos",
     "users_permissions_desc": "Gestione los accesos de sus empleados",
     "version": "Versión"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "inventory": "Inventario",
