--- a/web-app/public/locales/ff.json
+++ b/web-app/public/locales/ff.json
@@ -315,6 +315,10 @@
     "no_alerts": "Dara jeertinaama",
     "no_anomalies": "Walaa boofgol heɓaa",
     "no_rules": "Walaa sariyaaji heyɗinaa",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Huunde dormante",
     "rule_low_stock": "Stock famɗi",
     "rule_out_of_stock": "Stock gasii",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "Piiji {{count}}",
     "language_choice": "Suɓaade ɗemngal",
+    "last_30_days": "Duppere 30 lewru",
+    "last_7_days": "Duppere 7 lewru",
+    "last_90_days": "Duppere 90 lewru",
     "loading": "Habbu...",
     "merchant": "Merchant",
     "months_ago": "lebbbi {{count}} jawnii",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Administrator messages",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Category Distribution",
     "class_a": "Class A",
     "class_a_desc": "80% of your revenue",
@@ -702,6 +712,11 @@
     "class_b_desc": "15% of your revenue",
     "class_c": "Class C",
     "class_c_desc": "5% of your revenue",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Count",
     "count_stock": "Count stock",
     "count_stock_prompt": "Enter actual quantity for",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Gasii!",
     "expiry_alerts": "Jaɓgol (balɗe 30)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Generate new tasks",
     "greeting": "Dalal jamm, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Jaar-jaar",
+    "items_abbrev": "items",
     "low_stock": "Famɗi",
     "month_revenue": "Njeeg leebbi",
     "movements_30d": "Jaar-jaar (balɗe 30)",
     "movements_history": "Jaar-jaar galaa njuɓɓudi",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Dara ala",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Komand",
     "orders_section": "Komandji",
     "out_of_stock": "Gasii",
     "overstock": "Heewi",
     "pending_orders": "Habbu",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} product",
     "products_count_other": "{{count}} products",
     "profitability_analysis": "Saytu njaay mi",
     "recent_alerts": "Recent alerts",
     "recent_sales": "Jaay yi mujj",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotating Inventory",
     "see_detail_product": "See detail by product",
     "see_feature": "See this feature",
+    "see_full_report": "See full report",
     "see_less": "See less",
     "see_more": "See more",
     "see_more_count": "See {{count}} other critical products",
@@ -755,10 +790,12 @@
     "stats": "Statistics",
     "status_distribution": "Status distribution",
     "stock_by_category": "Stock by category",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Doxaliinu stock bi",
     "stock_label": "Stock",
     "stock_status": "État stock bi",
     "stock_value": "Njaay mi",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Here is your stock status",
     "suggestions_reorder": "Reorder Suggestions",
     "threshold": "Threshold",
@@ -769,6 +806,9 @@
     "top_products_value": "Top products (value)",
     "total_value": "Njeeg fof",
     "units": "piiji",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1804,6 +1844,20 @@
     "users_permissions": "Users & Permissions",
     "users_permissions_desc": "Manage your employees' access",
     "version": "Version"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
