--- a/web-app/public/locales/tr.json
+++ b/web-app/public/locales/tr.json
@@ -315,6 +315,10 @@
     "no_alerts": "Uyarı yok",
     "no_anomalies": "ALast Nameali tespit edilmedi",
     "no_rules": "Kural yapılandırılmadı",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Durgun ürün",
     "rule_low_stock": "Düşük stok",
     "rule_out_of_stock": "Stok bitti",
@@ -503,6 +507,9 @@
     "info": "Bilgi",
     "items_count": "{{count}} ürün",
     "language_choice": "Dil Seçin",
+    "last_30_days": "Son 30 gün",
+    "last_7_days": "Son 7 gün",
+    "last_90_days": "Son 90 gün",
     "loading": "Yükleniyor...",
     "merchant": "Esnaf",
     "months_ago": "{{count}} ay önce",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC Analizi (Öncelikler)",
     "admin_messages": "Yönetici mesajları",
     "ai_daily_summary": "Yapay Zeka Günlük Özeti",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Oluşturmak için dokunun",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Kategori Dağılımı",
     "class_a": "Sınıf A",
     "class_a_desc": "Cironuzun %80'i",
@@ -702,6 +712,11 @@
     "class_b_desc": "Cironuzun %15'i",
     "class_c": "Sınıf C",
     "class_c_desc": "Cironuzun %5'i",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Sayım",
     "count_stock": "Stok sayımı",
     "count_stock_prompt": "Gerçek miktarı girin:",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Süresi doldu!",
     "expiry_alerts": "Sona Erme Uyarıları (30g)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Yeni görevler oluştur",
     "greeting": "Merhaba, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Geçmiş",
+    "items_abbrev": "items",
     "low_stock": "Düşük Stok",
     "month_revenue": "Aylık Satışlar",
     "movements_30d": "Hareketler (30 gün)",
     "movements_history": "Hareket geçmişi",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Hareket yok",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Sipariş",
     "orders_section": "Siparişler",
     "out_of_stock": "Stok Tükendi",
     "overstock": "Fazla Stok",
     "pending_orders": "Beklemede",
+    "period_history": "{{count}}d history",
     "preferences_error": "Tercihleriniz güncellenemedi.",
     "products_count_one": "{{count}} ürün",
     "products_count_other": "{{count}} ürün",
     "profitability_analysis": "Profitability Analysis",
     "recent_alerts": "Son uyarılar",
     "recent_sales": "Son Satışlar",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Sürekli Envanter",
     "see_detail_product": "Ürün detayını gör",
     "see_feature": "Bu özelliği gör",
+    "see_full_report": "See full report",
     "see_less": "Daha az",
     "see_more": "Daha fazla",
     "see_more_count": "Diğer {{count}} kritik ürünü gör",
@@ -755,10 +790,12 @@
     "stats": "İstatistikler",
     "status_distribution": "Durum dağılımı",
     "stock_by_category": "Kategoriye göre stok",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Stok Değeri Değişimi (7g)",
     "stock_label": "Stok",
     "stock_status": "Stok Durumu",
     "stock_value": "Stok Değeri",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "İşte stok durumunuz",
     "suggestions_reorder": "İkmal önerileri",
     "threshold": "Eşik",
@@ -769,6 +806,9 @@
     "top_products_value": "En iyi ürünler (değer)",
     "total_value": "Toplam değer",
     "units": "birim",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1230,14 +1270,14 @@
     "price_range": "Fiyat Aralığı",
     "products": "Ürünler",
     "reset": "Sıfırla",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Ürün ara...",
     "search_supplier": "Tedarikçi ara...",
     "send_invitation": "Davet Gönder",
     "star": "⭐",
     "suppliers": "Pazar Yeri Tedarikçileri",
     "title": "Pazar Yeri",
-    "verified_only": "Sadece Doğrulanmış",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Sadece Doğrulanmış"
   },
   "modals": {
     "cancel": "İptal",
@@ -1842,6 +1882,20 @@
     "users_permissions_desc": "Çalışanlarınızın erişimini yönetin",
     "version": "Sürüm"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1941,24 +1995,24 @@
     "dashboard": "Tedarikçi Paneli",
     "delivery_zones": "Teslimat Bölgeleri",
     "min_order": "Min. Sipariş",
-    "order_id": "Sipariş kodu",
-    "orders": "Alınan Siparişler",
-    "pending_orders": "Bekleyen Siparişler",
-    "refuse": "Reddet",
-    "revenue_month": "Bu ayki gelir",
-    "reviews": "Müşteri Yorumları",
-    "ship": "Gönder",
-    "top_products": "En Çok Satan Ürünler",
-    "unavailable": "Mevcut Değil",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Sipariş kodu",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "Alınan Siparişler",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "Bekleyen Siparişler",
+    "refuse": "Reddet",
+    "revenue_month": "Bu ayki gelir",
+    "reviews": "Müşteri Yorumları",
+    "search_orders": "Search orders...",
+    "ship": "Gönder",
+    "top_products": "En Çok Satan Ürünler",
+    "unavailable": "Mevcut Değil"
   },
   "supplier_old": {
     "active_clients": "Aktif müşteriler",
@@ -1984,6 +2038,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -2006,9 +2062,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Yükleme özelliği yakında",
