--- a/web-app/public/locales/en.json
+++ b/web-app/public/locales/en.json
@@ -315,6 +315,10 @@
     "no_alerts": "No alerts",
     "no_anomalies": "No aLast Namealies detected",
     "no_rules": "No rules configured",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Dormant product",
     "rule_low_stock": "Low stock",
     "rule_out_of_stock": "Out of stock",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "{{count}} item(s)",
     "language_choice": "Choose language",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Loading...",
     "merchant": "Merchant",
     "months_ago": "{{count}} months ago",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Administrator messages",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Category Distribution",
     "class_a": "Class A",
     "class_a_desc": "80% of your revenue",
@@ -702,6 +712,11 @@
     "class_b_desc": "15% of your revenue",
     "class_c": "Class C",
     "class_c_desc": "5% of your revenue",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Count",
     "count_stock": "Count stock",
     "count_stock_prompt": "Enter actual quantity for",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Expired!",
     "expiry_alerts": "Expiry Alerts (30d)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Generate new tasks",
     "greeting": "Hello, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "History",
+    "items_abbrev": "items",
     "low_stock": "Low Stock",
     "month_revenue": "Monthly Sales",
     "movements_30d": "Movements (30 days)",
     "movements_history": "Movements history",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "No movement",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Order",
     "orders_section": "Orders",
     "out_of_stock": "Out of Stock",
     "overstock": "Overstock",
     "pending_orders": "Pending",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} product",
     "products_count_other": "{{count}} products",
     "profitability_analysis": "Profitability Analysis",
     "recent_alerts": "Recent Alerts",
     "recent_sales": "Recent Sales",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotating Inventory",
     "see_detail_product": "See detail by product",
     "see_feature": "See this feature",
+    "see_full_report": "See full report",
     "see_less": "See less",
     "see_more": "See more",
     "see_more_count": "See {{count}} other critical products",
@@ -755,10 +790,12 @@
     "stats": "Statistics",
     "status_distribution": "Status distribution",
     "stock_by_category": "Stock by category",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Stock Value Evolution (7d)",
     "stock_label": "Stock",
     "stock_status": "Stock Status",
     "stock_value": "Stock Value",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Here is your stock status",
     "suggestions_reorder": "Reorder Suggestions",
     "threshold": "Threshold",
@@ -769,6 +806,9 @@
     "top_products_value": "Top products (value)",
     "total_value": "Total value",
     "units": "units",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1698,26 +1738,26 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "inventory_check_label": "Inventory Check",
-    "inventory_check_desc": "Alert if no inventory performed for X days",
-    "dormant_products_label": "Dormant Products",
-    "dormant_products_desc": "Products without sales for X days",
-    "late_deliveries_label": "Late Deliveries",
-    "late_deliveries_desc": "Critical after X days of delay",
-    "replenishment_label": "Replenishment",
-    "replenishment_desc": "Products below minimum stock",
-    "pending_invitations_label": "Pending Invitations",
-    "pending_invitations_desc": "Pending for X days",
-    "debt_recovery_label": "Debt Recovery",
-    "debt_recovery_desc": "Reminders for outstanding debts",
-    "client_reactivation_label": "Client Reactivation",
-    "client_reactivation_desc": "Loyal clients inactive for X days",
-    "birthdays_label": "Birthdays",
     "birthdays_desc": "Notification for upcoming birthdays",
-    "monthly_report_label": "Monthly Report",
-    "monthly_report_desc": "Generate performance summary",
-    "expense_spike_label": "Expense Spike",
+    "birthdays_label": "Birthdays",
+    "client_reactivation_desc": "Loyal clients inactive for X days",
+    "client_reactivation_label": "Client Reactivation",
+    "debt_recovery_desc": "Reminders for outstanding debts",
+    "debt_recovery_label": "Debt Recovery",
+    "dormant_products_desc": "Products without sales for X days",
+    "dormant_products_label": "Dormant Products",
     "expense_spike_desc": "Alert if expenses increase by X%",
+    "expense_spike_label": "Expense Spike",
+    "inventory_check_desc": "Alert if no inventory performed for X days",
+    "inventory_check_label": "Inventory Check",
+    "late_deliveries_desc": "Critical after X days of delay",
+    "late_deliveries_label": "Late Deliveries",
+    "monthly_report_desc": "Generate performance summary",
+    "monthly_report_label": "Monthly Report",
+    "pending_invitations_desc": "Pending for X days",
+    "pending_invitations_label": "Pending Invitations",
+    "replenishment_desc": "Products below minimum stock",
+    "replenishment_label": "Replenishment",
     "unit_days": "days"
   },
   "settings": {
@@ -1800,6 +1840,20 @@
     "users_permissions": "Users & Permissions",
     "users_permissions_desc": "Manage your employees' access",
     "version": "Version"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
