--- a/web-app/public/locales/hi.json
+++ b/web-app/public/locales/hi.json
@@ -315,6 +315,10 @@
     "no_alerts": "कोई अलर्ट नहीं",
     "no_anomalies": "कोई विसंगति नहीं पाई गई",
     "no_rules": "कोई नियम कॉन्फ़िगर नहीं किया गया",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "निष्क्रिय उत्पाद",
     "rule_low_stock": "कम स्टॉक",
     "rule_out_of_stock": "स्टॉक समाप्त",
@@ -503,6 +507,9 @@
     "info": "जानकारी",
     "items_count": "{{count}} आइटम",
     "language_choice": "भाषा चुनें",
+    "last_30_days": "पिछले 30 दिन",
+    "last_7_days": "पिछले 7 दिन",
+    "last_90_days": "पिछले 90 दिन",
     "loading": "लोड हो रहा है...",
     "merchant": "व्यापारी",
     "months_ago": "{{count}} महीने पहले",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC विश्लेषण (प्राथमिकताएं)",
     "admin_messages": "व्यवस्थापक संदेश",
     "ai_daily_summary": "आज का AI सारांश",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "बनाने के लिए टैप करें",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "श्रेणी वितरण",
     "class_a": "वर्ग A",
     "class_a_desc": "आपके राजस्व का 80%",
@@ -702,6 +712,11 @@
     "class_b_desc": "आपके राजस्व का 15%",
     "class_c": "वर्ग C",
     "class_c_desc": "आपके राजस्व का 5%",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "गिनें",
     "count_stock": "स्टॉक गिनें",
     "count_stock_prompt": "वास्तविक मात्रा दर्ज करें",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "समाप्त!",
     "expiry_alerts": "समाप्ति अलर्ट (30 दिन)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "नए कार्य बनाएं",
     "greeting": "नमस्ते, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "इतिहास",
+    "items_abbrev": "items",
     "low_stock": "कम स्टॉक",
     "month_revenue": "मासिक बिक्री",
     "movements_30d": "गतिविधि (30 दिन)",
     "movements_history": "गतिविधि इतिहास",
     "net": "शुद्ध",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "कोई गतिविधि नहीं",
+    "no_stock_data": "No stock data available for this period",
     "normal": "सामान्य",
     "order_btn": "ऑर्डर करें",
     "orders_section": "ऑर्डर",
     "out_of_stock": "स्टॉक समाप्त",
     "overstock": "अतिरिक्त स्टॉक",
     "pending_orders": "लंबित",
+    "period_history": "{{count}}d history",
     "preferences_error": "आपकी प्राथमिकताएं अपडेट करने में असमर्थ।",
     "products_count_one": "{{count}} उत्पाद",
     "products_count_other": "{{count}} उत्पाद",
     "profitability_analysis": "लाभप्रदता विश्लेषण",
     "recent_alerts": "हालिया अलर्ट",
     "recent_sales": "हालिया बिक्री",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "रोटेटिंग इन्वेंटरी",
     "see_detail_product": "उत्पाद के अनुसार विवरण देखें",
     "see_feature": "यह सुविधा देखें",
+    "see_full_report": "See full report",
     "see_less": "कम देखें",
     "see_more": "और देखें",
     "see_more_count": "{{count}} अन्य गंभीर उत्पाद देखें",
@@ -755,10 +790,12 @@
     "stats": "सांख्यिकी",
     "status_distribution": "स्थिति वितरण",
     "stock_by_category": "श्रेणी के अनुसार स्टॉक",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "स्टॉक मूल्य विकास (7दि)",
     "stock_label": "स्टॉक",
     "stock_status": "स्टॉक स्थिति",
     "stock_value": "स्टॉक मूल्य",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "यहां आपकी स्टॉक स्थिति है",
     "suggestions_reorder": "पुनः आपूर्ति सुझाव",
     "threshold": "सीमा",
@@ -769,6 +806,9 @@
     "top_products_value": "शीर्ष उत्पाद (मूल्य)",
     "total_value": "कुल मूल्य",
     "units": "इकाइयां",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1860,6 +1900,20 @@
     "users_permissions": "Users & Permissions",
     "users_permissions_desc": "Manage your employees' access",
     "version": "Version"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
