--- a/web-app/public/locales/zh.json
+++ b/web-app/public/locales/zh.json
@@ -315,6 +315,10 @@
     "no_alerts": "无警报",
     "no_anomalies": "未检测到异常",
     "no_rules": "未配置规则",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "滞销产品",
     "rule_low_stock": "库存不足",
     "rule_out_of_stock": "缺货",
@@ -503,6 +507,9 @@
     "info": "信息",
     "items_count": "{{count}} 个项目",
     "language_choice": "选择语言",
+    "last_30_days": "最近30天",
+    "last_7_days": "最近7天",
+    "last_90_days": "最近90天",
     "loading": "加载中...",
     "merchant": "商家",
     "months_ago": "{{count}} 个月前",
@@ -694,7 +701,10 @@
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Administrator messages",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Category Distribution",
     "class_a": "Class A",
     "class_a_desc": "80% of your revenue",
@@ -702,6 +712,11 @@
     "class_b_desc": "15% of your revenue",
     "class_c": "Class C",
     "class_c_desc": "5% of your revenue",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Count",
     "count_stock": "Count stock",
     "count_stock_prompt": "Enter actual quantity for",
@@ -715,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Expired!",
     "expiry_alerts": "Expiry Alerts (30d)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Generate new tasks",
     "greeting": "您好，{{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "History",
+    "items_abbrev": "items",
     "low_stock": "低库存",
     "month_revenue": "月销售额",
     "movements_30d": "Movements (30 days)",
     "movements_history": "Movements history",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "No movement",
+    "no_stock_data": "No stock data available for this period",
     "normal": "正常",
     "order_btn": "Order",
     "orders_section": "Orders",
     "out_of_stock": "缺货",
     "overstock": "超库存",
     "pending_orders": "Pending",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} product",
     "products_count_other": "{{count}} products",
     "profitability_analysis": "盈利分析",
     "recent_alerts": "Recent alerts",
     "recent_sales": "近期销售",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotating Inventory",
     "see_detail_product": "See detail by product",
     "see_feature": "See this feature",
+    "see_full_report": "See full report",
     "see_less": "收起",
     "see_more": "查看更多",
     "see_more_count": "See {{count}} other critical products",
@@ -755,10 +790,12 @@
     "stats": "Statistics",
     "status_distribution": "Status distribution",
     "stock_by_category": "Stock by category",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "库存价值变化（7天）",
     "stock_label": "Stock",
     "stock_status": "库存状态",
     "stock_value": "库存价值",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "以下是您的库存状态",
     "suggestions_reorder": "Reorder Suggestions",
     "threshold": "Threshold",
@@ -769,6 +806,9 @@
     "top_products_value": "Top products (value)",
     "total_value": "Total value",
     "units": "units",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1230,14 +1270,14 @@
     "price_range": "价格范围",
     "products": "产品",
     "reset": "重置",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "搜索产品...",
     "search_supplier": "搜索供应商...",
     "send_invitation": "发送邀请",
     "star": "⭐",
     "suppliers": "市场供应商",
     "title": "市场 (Marketplace)",
-    "verified_only": "仅显示已验证",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "仅显示已验证"
   },
   "modals": {
     "cancel": "取消",
@@ -1805,6 +1845,20 @@
     "users_permissions_desc": "管理员工访问权限",
     "version": "版本"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1904,24 +1958,24 @@
     "dashboard": "供应商仪表盘",
     "delivery_zones": "配送区域",
     "min_order": "最低订单",
-    "order_id": "Order ID",
-    "orders": "收到的订单",
-    "pending_orders": "待处理订单",
-    "refuse": "拒绝",
-    "revenue_month": "本月收入",
-    "reviews": "客户评价",
-    "ship": "发货",
-    "top_products": "热销产品",
-    "unavailable": "不可用",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Order ID",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "收到的订单",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "待处理订单",
+    "refuse": "拒绝",
+    "revenue_month": "本月收入",
+    "reviews": "客户评价",
+    "search_orders": "Search orders...",
+    "ship": "发货",
+    "top_products": "热销产品",
+    "unavailable": "不可用"
   },
   "supplier_old": {
     "active_clients": "活跃客户",
@@ -1947,6 +2001,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1969,9 +2025,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "上传发票功能即将推出",
